--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
+body{
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #F4F4F4;
+  padding: 25px;
+  color: #242561;
+  background-image: url("../public/img/cidade.jpg");
+  background-position: center;
+  background-size: cover;
+} 
+
+h1{
+ color: #242561;
+ text-align: center;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2{
+  margin-bottom: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p{
+  margin: 10px 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+input,select{
+  box-sizing: border-box;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  width: 100%;
+}
+
+button{
+  background-color: #242561;
+  color: #fff;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  opacity: .8;
+  transition: .4s;
+  margin-right: 20px;
+}
+
+button:hover{
+  opacity: 1;
+}
+
+.todo-list{
+  margin-bottom: 25px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #555;
+}
+
+.todo{
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+.complete:hover{
+  background-color: #5cb85c;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.remove{
+  background-color: #eb4741;
+}
+.app{
+  max-width: 600px;
+  margin: 0 auto;
+  background-color: #efefef;
+  padding: 20px 30px;
+  border-radius: 15px;
+}
+
+.todo-form{
+  padding-bottom: 1.5rem;
+}
+
+.filter, .search{
+  border-bottom: 1px solid #555;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  
+}
+
+.filter-options{
+  display: flex;
+  justify-content: space-between;
+  gap: 3rem;
+  width: 50%;
+}
+
+.filter-options div{
+  flex: 1 1 0;
 }
